/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Sachin Mishra
 */

package ucf.assignments;

public class item {
    /*
    new string description
    new integers year, month, and date
    new integer completion status

    method setters
    method getters
        when retrieving due date, concaternate integers year month and date into string with formatting. return string.
     */
}
