/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Sachin Mishra
 */

package ucf.assignments;

public class toDoList {
    /*create string title
    create arrayList of item objects
    create integer count

    method set title
    method retrieve title

    method add item object
    method remove item object
    method read item object

    modifying item object is handled in the item class.
     */
}
